# mcap-encrypt

./: .fossa.yml  .gitignore  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  FORMAT.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  go.mod  go.sum  renovate.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fossa.yml  publish-npm.yml  publish-pypi.yml  release-drafter.yml  release.yml  repro.yml  scorecard.yml
cmd/mcap-encrypt/: main.go  pause_unix.go  pause_windows.go
docs/: api.md  foxglove.md  kms.md  one-pager.md  reproducible-builds.md  security-limitations.md
docs/audits/: 2026-06-14-full-audit.md
examples/: sample.mcap
examples/gen-sample/: main.go
pkg/mcapencrypt/: adversarial_test.go  attachment.go  bench_test.go  bridge.go  bridge_kms.go  bridge_size_test.go  bridge_stream.go  bridge_stream_test.go  chunk.go  codequality_test.go  crypto_test.go  decompress.go  decrypt.go  decrypt_kms.go  decrypt_kms_test.go  decrypt_plain_test.go  decrypt_timing_test.go  (+25 more)
py/: pyproject.toml
py/src/mcap_encrypt/: __init__.py  _aad.py  _binary.py  _keys.py  _records.py  _xchacha.py  decrypt.py  encrypt.py  inspect.py  rotate.py
py/tests/: conftest.py  test_adversarial.py  test_fuzz.py  test_inspect.py  test_interop.py  test_metadata.py  test_rotate.py  test_roundtrip.py
ts/: .npmignore  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.browser.config.ts  vitest.config.ts
(+42 files in other folders)
