[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcap-encrypt"
version = "0.9.0"
description = "Chunk-level encryption for MCAP robotics data files"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
    "pynacl>=1.5",
    "zstandard>=0.19",
    "lz4>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist", "hypothesis>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcap_encrypt"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcap_encrypt",
    "tests",
    "pyproject.toml",
    "README.md",
]
exclude = [
    ".venv*",
    "**/__pycache__",
    "**/.pytest_cache",
    "uv.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
